<resources>
    <string name="app_name">WelcomeActivity</string>
    <string name="header_text_main">Please click the button
 below to choose your favorite color of the rainbow!
 </string>
    <string name="header_text_picker">Rainbow Colors</string>
    <string name="footer_text_picker">Click the button
 above which is your favorite color of the rainbow.
 </string>
    <string name="color_chosen_message">%s is your favorite
 color!</string>
    <string name="submit_button_text">CHOOSE COLOR</string>

    <string name="red">RED</string>
    <string name="orange">ORANGE</string>
    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
    <string name="blue">BLUE</string>
    <string name="indigo">INDIGO</string>
    <string name="violet">VIOLET</string>
    <string name="unexpected_color">Unexpected color</string>
    <string name="red_text">Red</string>
    <string name="orange_text">Orange</string>
    <string name="yellow_text">Yellow</string>
    <string name="green_text">Green</string>
    <string name="blue_text">Blue</string>
    <string name="indigo_text">Indigo</string>
    <string name="violet_text">Violet</string>
    <string name="rainbow_colors">RAINBOW COLORS</string>
    <string name="click_the_color">Click the button above which is your favorite color of the rainbow</string>
    <string name="choose_new_color">Please click the button below to choose your favorite color</string>
    <string name="choose_color">CHOOSE COLOR</string>
</resources>