<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RainbowColorPickerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rainbow_colors"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:padding="5dp"
        android:text="@string/rainbow_colors"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/click_the_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:text="@string/click_the_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/violet" />

    <Button
        style="@style/Widget.AppCompat.Button"
        app:backgroundTint="@color/red"
        android:layout_width="155dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="10sp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/rainbow_colors"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/red"
        android:text="@string/red_text" />

    <Button
        android:layout_width="150dp"
        app:backgroundTint="@color/orange"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/red"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/orange"
        android:text="@string/orange_text" />

    <Button
        android:layout_width="150dp"
        app:backgroundTint="@color/yellow"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_height="60dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/orange"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/yellow"
        android:text="@string/yellow_text" />

    <Button
        android:layout_width="150dp"
        app:backgroundTint="@color/green"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_height="60dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/green"
        android:text="@string/green_text" />

    <Button
        android:layout_width="150dp"
        app:backgroundTint="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_height="60dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/green"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/blue"
        android:text="@string/blue_text" />

    <Button
        android:layout_width="150dp"
        android:textSize="20sp"
        app:backgroundTint="@color/indigo"
        android:layout_height="60dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/blue"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/indigo"
        android:text="@string/indigo_text" />

    <Button
        android:layout_width="150dp"
        app:backgroundTint="@color/violet"
        android:textSize="20sp"
        android:layout_height="60dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/indigo"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/violet"
        android:text="@string/violet_text" />

</androidx.constraintlayout.widget.ConstraintLayout>